k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: auth-service
          image: ontrackacr.azurecr.io/auth-service:v1
          ports:
            - containerPort: 4004
          readinessProbe:
            httpGet:
              path: /health
              port: 4004
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4004
  type: ClusterIP
